实现域租户的增、删、改、查接口
